# FreeClimber

./: .gitignore  CHANGELOG.md  FreeClimber.icns  FreeClimber.spec  README.md  launch.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
FreeClimber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
example/: w1118_m_2_1.filtered.csv  w1118_m_2_1.raw.csv  w1118_m_2_1.slopes.csv
example_other/ex_1/: climbing_1.cfg  climbing_1.filtered.csv  climbing_1.raw.csv  climbing_1.slopes.csv
scripts/: FreeClimber_gui.py  FreeClimber_gui_backup.py  FreeClimber_main.py  __init__.py  config.py  detector.py  gather_files.py  workflow.py
scripts/analysis/: __init__.py  metrics.py  normalization.py  quality.py  stats.py
scripts/gui/: __init__.py  app.py  controller.py  theme.json  visual_test.py
scripts/gui/assets/: generate_icon.py
scripts/hardware/: __init__.py  camera.py  motor.py
scripts/output/: __init__.py  database.py  export.py  figures.py  provenance.py  reports.py  video.py
tests/: conftest.py  test_config.py  test_database.py  test_detector.py  test_export.py  test_figures.py  test_gui_smoke.py  test_hardware.py  test_integration.py  test_metrics.py  test_normalization.py  test_profiles.py  test_quality.py  test_reports.py  test_stats.py  test_video.py
