[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FreeClimber"
version = "2.0.0"
description = "Drosophila RING assay climbing velocity analysis — background subtraction, particle detection, and local linear regression."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jason Moorthy", email = "jmoorthy@wayne.edu"},
]
maintainers = [
    {name = "Jason Moorthy", email = "jmoorthy@wayne.edu"},
]
keywords = [
    "drosophila", "climbing", "negative-geotaxis", "RING-assay",
    "particle-detection", "trackpy", "behavior", "neuroscience",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "trackpy>=0.6",
    "opencv-python>=4.8",
    "customtkinter>=5.2",
]

[project.scripts]
freeclimber = "scripts.gui.app:main"

[project.optional-dependencies]
reports = ["jinja2>=3.1", "weasyprint>=60"]
interactive = ["plotly>=5.18"]
excel = ["openpyxl>=3.1"]
all = ["jinja2>=3.1", "weasyprint>=60", "plotly>=5.18", "openpyxl>=3.1"]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/adamspierer/FreeClimber"
Documentation = "https://github.com/adamspierer/FreeClimber"
Repository = "https://github.com/adamspierer/FreeClimber"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore_glob = ["scripts/**"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "E402", "F401", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
